--- a/frontend/src/app/modules/legal/pages/privacy-policy/privacy-policy.page.html
+++ b/frontend/src/app/modules/legal/pages/privacy-policy/privacy-policy.page.html
@@ -50,6 +50,31 @@
   Daten gelöscht.
 </p>
 
+<h3>Daten, die im Zuge einer Kontaktanfrage verarbeitet werden</h3>
+
+<p>
+  Wenn Sie uns kontaktieren, verarbeiten wir die von Ihnen angegebenen Daten, um Ihre Anfrage zu beantworten. Die
+  Daten werden auf Grundlage des Art. 6 Abs. 1 Buchstabe a) DSGVO verarbeitet.
+  Wir löschen die Daten, sobald sie für die Erreichung des Zwecks ihrer Erhebung - je nach Art der Kontaktanfrage, wie
+  z.B. einer Bestellung - nicht mehr erforderlich sind.
+</p>
+
+<ul>
+  <li>Name</li>
+  <li>E-Mail-Adresse</li>
+  <li>Telefonnummer</li>
+  <li>Betreff</li>
+  <li>Nachricht</li>
+</ul>
+
+<p>
+  Wir nutzen Namen, E-Mail-Adresse und Telefonnummer, um Ihnen auf Ihre Anfrage zu antworten.
+  Betreff und Nachricht werden benötigt, um Ihre Anfrage zu bearbeiten.
+  Nach Abschluss der Bearbeitung, etwa wenn Ihre Anfrage beantwortet wurde, löschen wir die Daten.
+  Wird aus Ihrer Anfrage ein Bestellprozess gestartet, gelten die Regelungen unter Punkt „Daten, die im Zuge eines
+  Bestellprozesses und zur Auftragserfüllung verarbeitet werden“.
+</p>
+
 <h3>Daten, die für die Bereitstellung der Webseite und die Erstellung von Protokolldateien verarbeitet werden</h3>
 
 <p>
