--- a/frontend/src/app/modules/admin/modules/mailbox/pages/mailbox/mailbox.page.html
+++ b/frontend/src/app/modules/admin/modules/mailbox/pages/mailbox/mailbox.page.html
@@ -1,70 +1,66 @@
-<ng-container *unlessFlag="'CONTACT_FORM'">
-  <app-note>Hier entsteht in Kürze das Postfach.</app-note>
-</ng-container>
+<div class="action-bar">
+  <input #search type="text" placeholder="Suchen..." (input)="updateSearchTerm(search.value)"/>
+  <app-dropdown #statusDropdown
+                label="Status"
+                [items]="statusDropdownItems$ | async"
+                [showSelectionIndicator]="true"
+                (selectionChanged)="updateSelectedStatus(statusDropdown, $event)">
+    <ng-template let-item>
+      <span>{{ item.label }}</span>
+    </ng-template>
 
-<ng-container *flag="'CONTACT_FORM'">
-  <div class="action-bar">
-    <input #search type="text" placeholder="Suchen..." (input)="updateSearchTerm(search.value)"/>
-    <app-dropdown #statusDropdown
-                  label="Status"
-                  [items]="statusDropdownItems$ | async"
-                  [showSelectionIndicator]="true"
-                  (selectionChanged)="updateSelectedStatus(statusDropdown, $event)">
-      <ng-template let-item>
-        <span>{{ item.label }}</span>
-      </ng-template>
+    <div header class="dropdown-header">
+      <app-button-column [rounded]="false">
+        <app-button (click)="clearStatusSelection(statusDropdown)">Zurücksetzen</app-button>
+      </app-button-column>
+    </div>
+  </app-dropdown>
+</div>
 
-      <div header class="dropdown-header">
-        <app-button-column [rounded]="false">
-          <app-button (click)="clearStatusSelection(statusDropdown)">Zurücksetzen</app-button>
-        </app-button-column>
-      </div>
-    </app-dropdown>
-  </div>
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
 
-  <app-loading-bar [visible]="loading$ | async"></app-loading-bar>
+@if (mailsLoaded$ | async) {
+  @if (mails$ | async; as mails) {
+    @if (mails.length === 0) {
+      <app-note level="info">Keine Mails vorhanden.</app-note>
+    } @else {
+      <app-note level="info">Insgesamt gibt es {{ totalMails$ | async }} Mails</app-note>
 
-  @if (mailsLoaded$ | async) {
-    @if (mails$ | async; as mails) {
-      @if (mails.length === 0) {
-        <app-note level="info">Keine Mails vorhanden.</app-note>
-      } @else {
-        <table class="mails-table">
-          <colgroup>
-            <col span="1" style="width: 32px">
-            <col span="1" style="width: auto">
-            <col class="sender" span="1" style="width: 200px">
-            <col class="date" span="1" style="width: 140px">
-          </colgroup>
-          <thead>
-          <tr>
-            <th></th>
-            <th class="subject">Betreff</th>
-            <th class="sender">Absender</th>
-            <th class="date">Datum</th>
-          </tr>
-          </thead>
-          <tbody>
-            @for (mail of mails; track mail.id) {
-              <a class="table-row" [routerLink]="mail.id">
-                <td>
-                  @if (mail.isUnread()) {
-                    <span class="unread-indicator"></span>
-                  }
-                </td>
-                <td class="subject" [class.unread]="mail.isUnread()" [title]="mail.subject">{{ mail.subject }}</td>
-                <td class="sender" title="{{ mail.sender.name }} ({{ mail.sender.mail }})">
-                  <div class="sender-details">
-                    <span class="name">{{ mail.sender.name }}</span>
-                    <span class="mail">{{ mail.sender.mail }}</span>
-                  </div>
-                </td>
-                <td class="date" [title]="mail.receivedAt | date: 'full'">{{ mail.receivedAt | date: "short" }}</td>
-              </a>
-            }
-          </tbody>
-        </table>
-      }
+      <table class="mails-table">
+        <colgroup>
+          <col span="1" style="width: 32px">
+          <col span="1" style="width: auto">
+          <col class="sender" span="1" style="width: 200px">
+          <col class="date" span="1" style="width: 140px">
+        </colgroup>
+        <thead>
+        <tr>
+          <th></th>
+          <th class="subject">Betreff</th>
+          <th class="sender">Absender</th>
+          <th class="date">Datum</th>
+        </tr>
+        </thead>
+        <tbody>
+          @for (mail of mails; track mail.id) {
+            <a class="table-row" [routerLink]="mail.id">
+              <td>
+                @if (mail.isUnread()) {
+                  <span class="unread-indicator"></span>
+                }
+              </td>
+              <td class="subject" [class.unread]="mail.isUnread()" [title]="mail.subject">{{ mail.subject }}</td>
+              <td class="sender" title="{{ mail.sender.name }} ({{ mail.sender.mail }})">
+                <div class="sender-details">
+                  <span class="name">{{ mail.sender.name }}</span>
+                  <span class="mail">{{ mail.sender.mail }}</span>
+                </div>
+              </td>
+              <td class="date" [title]="mail.receivedAt | date: 'full'">{{ mail.receivedAt | date: "short" }}</td>
+            </a>
+          }
+        </tbody>
+      </table>
     }
   }
-</ng-container>
+}
