--- a/frontend/src/app/modules/admin/modules/mailbox/pages/mail/mail.page.scss
+++ b/frontend/src/app/modules/admin/modules/mailbox/pages/mail/mail.page.scss
@@ -32,6 +32,27 @@
   margin-top: 18px;
 }
 
+.sender-container {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+
+  .name {
+  }
+
+  .mail {
+    font-size: 14px;
+    color: rgba(var(--text-rgb), 0.8);
+  }
+
+  .phone {
+    font-size: 14px;
+    font-style: italic;
+    color: rgba(var(--text-rgb), 0.8);
+  }
+
+}
+
 @media only screen and (max-width: 1000px) {
   .action-bar {
     flex-direction: column;
