--- a/frontend/src/app/modules/admin/modules/mailbox/pages/mail/mail.page.html
+++ b/frontend/src/app/modules/admin/modules/mailbox/pages/mail/mail.page.html
@@ -7,22 +7,38 @@
       </span>
     </span>
   </app-button>
-  <app-button>
-    <span class="icon-button">
-      <span class="material-icons">mark_email_unread</span>
-      <span>
-        Als ungelesen markieren
-      </span>
-    </span>
-  </app-button>
-  <app-button routerLink="delete" color="warn">
-    <span class="icon-button">
-      <span class="material-icons">delete</span>
-      <span>
-        Löschen
-      </span>
-    </span>
-  </app-button>
+  @if (mailLoaded$ | async) {
+    @if (mail$ | async | ifSome; as mail) {
+      @if (mail.isRead()) {
+        <app-button [disabled]="cannotMarkAsUnread$ | async" (click)="markAsUnread(mail)">
+          <span class="icon-button">
+            <span class="material-icons">mark_email_unread</span>
+            <span>
+              Als ungelesen markieren
+            </span>
+          </span>
+        </app-button>
+      } @else {
+        <app-button [disabled]="cannotMarkAsRead$ | async" (click)="markAsRead(mail)">
+          <span class="icon-button">
+            <span class="material-icons">mark_email_read</span>
+            <span>
+              Als gelesen markieren
+            </span>
+          </span>
+        </app-button>
+      }
+
+      <app-button routerLink="delete" color="warn">
+        <span class="icon-button">
+          <span class="material-icons">delete</span>
+          <span>
+            Löschen
+          </span>
+        </span>
+      </app-button>
+    }
+  }
 </div>
 
 <app-loading-bar [visible]="loading$ | async"></app-loading-bar>
