Mark mail as read when visiting the mail page

--- a/frontend/src/app/modules/catalog/modules/patterns/pages/pattern/pattern.page.html
+++ b/frontend/src/app/modules/catalog/modules/patterns/pages/pattern/pattern.page.html
@@ -5,6 +5,9 @@
     <div class="images">
       @if (images$ | async; as images) {
         <app-image-slider [images]="images" [theme]="theme$ | async"></app-image-slider>
+        <div class="image-subtext">
+          <span>Es handelt sich um beispielhafte Abbildungen. Ihr Endprodukt basiert etwa auf der Wahl des Stoffs, des Motivs, der gewählten Variante und Extras.</span>
+        </div>
       }
     </div>
     <div class="details">
