--- a/frontend/src/app/modules/admin/modules/mailbox/pages/delete/delete.page.html
+++ b/frontend/src/app/modules/admin/modules/mailbox/pages/delete/delete.page.html
@@ -1,26 +1,30 @@
-<app-note level="warn">
-  Sie sind im Begriff die Nachricht mit dem Betreff „Test“ zu löschen.
-  Hierbei handelt es sich um eine Aktion, die <strong>nicht</strong> rückgängig gemacht werden kann.
-</app-note>
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
 
-<div class="actions">
-  <app-button routerLink="..">
+@if (mail$ | async; as mail) {
+  <app-note level="warn">
+    Sie sind im Begriff die Nachricht mit dem Betreff „{{ mail.subject }}“ zu löschen.
+    Hierbei handelt es sich um eine Aktion, die <strong>nicht</strong> rückgängig gemacht werden kann.
+  </app-note>
+
+  <div class="actions">
+    <app-button routerLink="..">
     <span class="icon-button">
       <span class="material-icons">close</span>
       <span>
         Abbrechen
       </span>
     </span>
-  </app-button>
+    </app-button>
 
-  <app-button [disabled]="deleting$ | async" (click)="deleteMail()" color="warn">
-    @if (deleting$ | async) {
-      <span class="loading-button-text">
+    <app-button [disabled]="deleting$ | async" (click)="deleteMail(mail)" color="warn">
+      @if (deleting$ | async) {
+        <span class="loading-button-text">
             <app-loading-spinner size="16"></app-loading-spinner>
             <span>Löscht...</span>
           </span>
-    } @else {
-      Unwiderruflich löschen
-    }
-  </app-button>
-</div>
+      } @else {
+        Unwiderruflich löschen
+      }
+    </app-button>
+  </div>
+}
