--- a/frontend/src/app/modules/admin/modules/dashboard/pages/dashboard/dashboard.page.scss
+++ b/frontend/src/app/modules/admin/modules/dashboard/pages/dashboard/dashboard.page.scss
@@ -1,5 +1,5 @@
 ul.cards {
-  margin: 0;
+  margin: 16px 0 0 0;
   padding: 0;
   list-style-type: none;
   display: flex;
@@ -21,19 +21,36 @@ ul.cards {
 
   li {
     display: flex;
-    flex-direction: column;
-    background-color: var(--contrast);
-    border-radius: 12px;
-    padding: 8px 12px;
-    gap: 12px;
+    flex-direction: row;
+    align-items: center;
+    border-left: 2px solid var(--background-low-contrast);
+    padding: 12px 16px;
+    gap: 16px;
 
-    label {
-      cursor: pointer;
-      color: var(--background-mid-contrast);
+    & > .icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      & > .material-icons {
+        font-size: 32px;
+      }
     }
 
-    p {
-      margin: 0;
+    & > .content {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+
+      label {
+        cursor: pointer;
+        font-size: 21px;
+        font-weight: 200;
+      }
+
+      p {
+        margin: 0;
+      }
     }
 
     .actions {
