--- a/frontend/src/app/modules/admin/modules/notifications/components/pending-channel/pending-channel.component.scss
+++ b/frontend/src/app/modules/admin/modules/notifications/components/pending-channel/pending-channel.component.scss
@@ -28,9 +28,13 @@
   align-items: center;
 }
 
-.actions {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  margin-top: 12px;
+@media only screen and (max-width: 1000px) {
+  .field {
+    flex-wrap: wrap;
+    gap: 4px;
+
+    input {
+      width: 100%;
+    }
+  }
 }
