--- a/frontend/src/app/modules/admin/modules/notifications/pages/notifications/notifications.page.scss
+++ b/frontend/src/app/modules/admin/modules/notifications/pages/notifications/notifications.page.scss
@@ -74,13 +74,15 @@ table.notifications-table {
         flex-direction: column;
         gap: 4px;
 
-        .title {
-          font-weight: bold;
-        }
-
         .message {
           font-size: 14px;
           color: rgba(var(--text-rgb), 0.7);
+        }
+
+        .date {
+          font-size: 12px;
+          color: rgba(var(--text-rgb), 0.5);
+          text-align: right;
         }
       }
     }
@@ -107,14 +109,29 @@ table.notifications-table {
   align-items: center;
 }
 
+.mobile-only {
+  display: none;
+}
+
 @media only screen and (max-width: 1000px) {
   .action-bar {
     flex-direction: column;
     gap: 12px;
-    align-items: stretch;
+    align-items: center;
+
+    .left-actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+    }
   }
 
-  table.mails-table {
+  .mobile-only {
+    display: block;
+  }
+
+  table.notifications-table {
     col {
       &.date {
         display: none;
