Drafting products page

--- a/frontend/src/app/modules/admin/modules/products/pages/products/products.page.html
+++ b/frontend/src/app/modules/admin/modules/products/pages/products/products.page.html
@@ -1,13 +1,73 @@
-<h3>Products</h3>
+<div class="action-bar">
+  <input #search type="text" placeholder="Suchen..." (input)="updateSearchTerm(search.value)"/>
+  <div class="from-selector date-selector">
+    <label for="from">Von</label>
+    <input #from type="date" id="from" (input)="updateFrom(from.valueAsDate)"/>
+  </div>
+  <div class="to-selector date-selector">
+    <label for="to">Bis</label>
+    <input #to type="date" id="to" (input)="updateTo(to.valueAsDate)"/>
+  </div>
+  <app-button routerLink="create">
+    <span class="icon-button">
+      <span class="material-icons">add</span>
+      <span>Neues Produkt</span>
+    </span>
+  </app-button>
+</div>
 
-<p>A product will consist of the following:</p>
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
 
-<ul>
-  <li>Product number (equal to the article number)</li>
-  <li>Links to the used pattern and fabrics (can be multiple)</li>
-  <li>The composition of the used fabrics (cotton, elasthan, polyester, ...)</li>
-  <li>A text (text area that supports formatting) of the used fabrics (Charge-ID and producer of the fabrics) and additional things like buttons, zippers, ...</li>
-  <li>A text (text area that supports formatting) of risks ("Sicherheitshinweise")</li>
-  <li>A date of when the product was produced (producedAt)</li>
-  <li>A date of when the product was created (createdAt)</li>
-</ul>
+@if (productsLoaded$ | async) {
+  @if (products$ | async; as products) {
+    @if (products.length === 0) {
+      <app-note level="info">Keine Produkte vorhanden.</app-note>
+    } @else {
+      <table class="products-table">
+        <colgroup>
+          <col class="image" span="1" style="width: 96px"/>
+          <col class="number" span="1" style="width: auto"/>
+          <col class="produced-at-date" span="1" style="width: 140px"/>
+        </colgroup>
+        <thead>
+        <tr>
+          <th class="image"></th>
+          <th class="number">Produkt-Nr.</th>
+          <th class="produced-at-date">Datum</th>
+        </tr>
+        </thead>
+        <tbody>
+          @for (product of products; track product.id) {
+            <a class="table-row" [routerLink]="product.id">
+              <td class="image">
+                @if (product.images.length > 0) {
+                  <img [src]="getImageUrl(product.images[0])" width="64" height="64">
+                } @else {
+                  <span class="image-placeholder"></span>
+                }
+              </td>
+              <td class="number">
+                {{ product.number }}
+              </td>
+              <td class="produced-at-date" [title]="product.producedAt | date: 'full'">
+                {{ product.producedAt | date: "short" }}
+              </td>
+            </a>
+          }
+        </tbody>
+      </table>
+
+      @if (moreProductsAvailable$ | async) {
+        <div class="footer-actions">
+          <app-button (click)="loadMoreProducts()">
+            Mehr laden... ({{ remainingProductsCount$ | async }})
+          </app-button>
+        </div>
+      } @else {
+        <div class="footer-actions">
+          <app-note level="info">Keine weiteren Produkte vorhanden.</app-note>
+        </div>
+      }
+    }
+  }
+}
