Drafting product details and delete page

--- a/frontend/src/app/modules/admin/modules/products/pages/product/product.page.html
+++ b/frontend/src/app/modules/admin/modules/products/pages/product/product.page.html
@@ -1,1 +1,137 @@
-Product
+<div class="action-bar">
+  <app-button routerLink="..">
+    <span class="icon-button">
+      <span class="material-icons">chevron_left</span>
+      <span>Zurück</span>
+    </span>
+  </app-button>
+
+  <app-button routerLink="delete" color="warn">
+    <span class="icon-button">
+      <span class="material-icons">delete</span>
+      <span>Löschen</span>
+    </span>
+  </app-button>
+</div>
+
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
+
+@if (productLoaded$ | async) {
+  @if (product$ | async | ifSome; as product) {
+    <div class="product-details">
+      <div class="product-detail">
+        <label>Bilder</label>
+        <div class="product-images">
+          @if (images$ | async; as images) {
+            @if (images.length > 0) {
+              <app-image-slider [images]="images"
+                                [theme]="theme$ | async">
+              </app-image-slider>
+            } @else {
+              <span class="image-placeholder">
+              <span class="material-icons">image</span>
+            </span>
+            }
+          }
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="product-detail">
+        <label>Produkt-Nr.</label>
+        <span>{{ product.number }}</span>
+      </div>
+
+      <div class="product-detail">
+        <label>Links</label>
+        <div class="product-links">
+          @if (product.links.length > 0) {
+            <ul class="product-links-list">
+              @for (link of product.links; track link.type.internal) {
+                <li>
+                  <a [routerLink]="link.toHref()">
+                    {{ link.type.label }}
+                  </a>
+                </li>
+              }
+            </ul>
+          } @else {
+            <app-note>Keine Links vorhanden</app-note>
+          }
+        </div>
+      </div>
+
+      <div class="product-detail">
+        <label>Stoff-Zusammensetzung</label>
+        <div class="fabric-composition">
+          <table class="fabric-composition-table">
+            <thead>
+            <tr>
+              <th class="fabric-type">Stoffart</th>
+              <th class="percentage">Anteil</th>
+            </tr>
+            </thead>
+            <tbody>
+              @for (item of product.fabricComposition.getSortedByPercentage(); track item.fabricType.internal) {
+                <tr>
+                  <td class="fabric-type">{{ item.fabricType.label }}</td>
+                  <td class="percentage">{{ item.percentage }}%</td>
+                </tr>
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="product-detail">
+        <label>Inhaltsangaben</label>
+        <div class="product-contains">
+          <quill-view [content]="product.notes.contains"
+                      format="json"
+                      theme="bubble"
+                      style="display: block">
+          </quill-view>
+        </div>
+      </div>
+
+      <div class="product-detail">
+        <label>Pflegehinweise</label>
+        <div class="product-care">
+          <quill-view [content]="product.notes.care"
+                      format="json"
+                      theme="bubble"
+                      style="display: block">
+          </quill-view>
+        </div>
+      </div>
+
+      <div class="product-detail">
+        <label>Sicherheitshinweise</label>
+        <div class="product-safety">
+          <quill-view [content]="product.notes.safety"
+                      format="json"
+                      theme="bubble"
+                      style="display: block">
+          </quill-view>
+        </div>
+      </div>
+
+      <div class="product-detail">
+        <label>Produziert am</label>
+        <span class="product-produced-at">{{ product.producedAt | date: 'dd.MM.yyyy' }}
+          um {{ product.producedAt | date: 'HH:mm' }}</span>
+      </div>
+
+      <div class="product-detail">
+        <label>Erstellt am</label>
+        <span class="product-created-at">{{ product.createdAt | date: 'dd.MM.yyyy' }}
+          um {{ product.createdAt | date: 'HH:mm' }}</span>
+      </div>
+    </div>
+  } @else {
+    <app-note level="warn">
+      Dieses Produkt konnte nicht gefunden werden.
+    </app-note>
+  }
+}
