--- a/frontend/src/app/modules/admin/modules/products/pages/delete/delete.page.html
+++ b/frontend/src/app/modules/admin/modules/products/pages/delete/delete.page.html
@@ -1,1 +1,28 @@
-Delete
+<app-loading-bar [visible]="loading$ | async"></app-loading-bar>
+
+@if (product$ | async; as product) {
+  <app-note level="warn">
+    Sie sind im Begriff das Produkt mit der Nummer „{{ product.number }}“ zu löschen.
+    Hierbei handelt es sich um eine Aktion, die <strong>nicht</strong> rückgängig gemacht werden kann.
+  </app-note>
+
+  <div class="actions">
+    <app-button routerLink="..">
+    <span class="icon-button">
+      <span class="material-icons">close</span>
+      <span>Abbrechen</span>
+    </span>
+    </app-button>
+
+    <app-button [disabled]="deleting$ | async" (click)="deleteProduct(product)" color="warn">
+      @if (deleting$ | async) {
+        <span class="loading-button-text">
+          <app-loading-spinner size="16"></app-loading-spinner>
+          <span>Löscht...</span>
+        </span>
+      } @else {
+        Unwiderruflich löschen
+      }
+    </app-button>
+  </div>
+}
