--- a/frontend/src/app/modules/admin/modules/products/pages/products/products.page.scss
+++ b/frontend/src/app/modules/admin/modules/products/pages/products/products.page.scss
@@ -17,11 +17,18 @@
 }
 
 .image-placeholder {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 64px;
   background-color: var(--background-low-contrast);
   border-radius: 4px;
+
+  & > .material-icons {
+    font-size: 32px;
+    color: rgba(var(--text-rgb), 0.5);
+  }
 }
 
 table.products-table {
