--- a/frontend/src/app/components/app/app.component.html
+++ b/frontend/src/app/components/app/app.component.html
@@ -6,5 +6,6 @@
 
 <app-footer></app-footer>
 
-<app-overlay-container [parentElement]="elementRef.nativeElement"></app-overlay-container>
+<app-dialog-outlet></app-dialog-outlet>
 <app-notification-outlet></app-notification-outlet>
+<app-overlay-container [parentElement]="elementRef.nativeElement"></app-overlay-container>
