--- a/frontend/src/app/modules/admin/modules/products/pages/product/product.page.scss
+++ b/frontend/src/app/modules/admin/modules/products/pages/product/product.page.scss
@@ -2,6 +2,13 @@
   display: block;
 }
 
+label {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
 .action-bar {
   display: flex;
   justify-content: space-between;
@@ -66,9 +73,19 @@
       border-bottom: 1px solid var(--background-low-contrast);
 
       & > a {
-        display: block;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
         color: var(--text);
         padding: 16px 12px;
+
+        .actions {
+          display: inline-flex;
+          flex-direction: row;
+          gap: 8px;
+          align-items: center;
+        }
 
         &:hover {
           background-color: var(--background-low-contrast);
