--- a/frontend/src/app/modules/shared/modules/dialog/components/outlet/outlet.component.scss
+++ b/frontend/src/app/modules/shared/modules/dialog/components/outlet/outlet.component.scss
@@ -1,9 +1,8 @@
 :host {
   display: block;
-  position: absolute;
-  z-index: 99990;
+  position: fixed;
+  z-index: 99950;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   pointer-events: none;
