--- a/frontend/src/app/modules/shared/modules/dialog/components/dialog/dialog.component.scss
+++ b/frontend/src/app/modules/shared/modules/dialog/components/dialog/dialog.component.scss
@@ -8,6 +8,8 @@
   height: 100%;
   pointer-events: auto;
   background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(8px);
+  animation: fade-in 0.2s ease;
 }
 
 .dialog-header {
@@ -37,6 +39,7 @@
 }
 
 .content-container {
+  position: absolute;
   display: flex;
   flex-direction: column;
   background-color: var(--background);
@@ -45,6 +48,7 @@
   min-width: 500px;
   max-width: 95%;
   max-height: 95%;
+  animation: slide-in 0.2s ease;
 
   & > .dialog-header {
     flex: 0 0 auto;
@@ -61,5 +65,27 @@
     width: 95%;
     height: 95%;
     min-width: unset;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(0px);
+  }
+
+  to {
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(8px);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateY(-100%);
+  }
+
+  to {
+    transform: translateY(0);
   }
 }
