Fabric composition edit dialog

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -97,6 +97,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="tel"],
+input[type="number"],
 input[type="date"] {
   box-sizing: border-box;
   appearance: none;
