--- a/frontend/src/app/modules/admin/modules/products/dialogs/edit-fabric-composition/edit-fabric-composition.dialog.scss
+++ b/frontend/src/app/modules/admin/modules/products/dialogs/edit-fabric-composition/edit-fabric-composition.dialog.scss
@@ -1,13 +1,92 @@
 :host {
   display: block;
-  padding: 16px 8px;
   width: 600px;
-  height: 500px;
+}
+
+table.fabric-composition-table {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+
+  thead {
+    th {
+      user-select: none;
+      padding: 8px 16px;
+      font-weight: normal;
+      font-size: 0.8em;
+      color: rgba(var(--text-rgb), 0.7);
+      border-bottom: 4px solid var(--background-low-contrast);
+
+      &.fabric-type {
+        text-align: center;
+      }
+
+      &.percentage {
+        text-align: left;
+      }
+    }
+  }
+
+  tbody {
+    tr {
+      vertical-align: middle;
+      transition: background-color 0.2s ease;
+
+      &:hover {
+        background-color: var(--background-low-contrast);
+      }
+
+      &:last-child {
+        td {
+          border-bottom: none;
+        }
+      }
+    }
+  }
+
+  td {
+    cursor: pointer;
+    padding: 16px 16px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    border-bottom: 1px solid var(--background-low-contrast);
+
+    &.fabric-type {
+      text-align: center;
+
+      app-dropdown {
+        width: 100%;
+      }
+    }
+
+    &.percentage {
+      text-align: left;
+    }
+  }
+}
+
+.error-container {
+  padding: 0 16px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 16px;
+  border-top: 1px solid var(--background-low-contrast);
 }
 
 @media only screen and (max-width: 1000px) {
   :host {
     width: auto;
     height: auto;
+  }
+
+  .footer {
+    flex-direction: column;
+    align-items: stretch;
   }
 }
